*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.10.0@9913 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -57,6 +57,7 @@ module.HTDateFormat.FirstDayOfWeekOffset.desc=Brug brugerdefinerede forskydning 
 module.StaffMarker.desc=Markerer funktionær brugernavne på fora og hold sider.
 module.StaffMarker.manager.desc=Markere Funktionærer brugernavne på hold sider.
 module.StaffMarker.own.desc=Brugerdefinerede markører i JSON format med bruger-ID som nøgle og typografi som værdi, f.eks. {"1001"\: "farve\: rød;", "1002"\: "background-color\: yellow;"}
+module.StaffMarker.external.desc=Markér personale af andre chpp apps
 #ForumYouthIcons
 module.ForumYouthIcons.desc=Viser et hyperlinkpanel for ungdomsskolen (fungerer også for mail, presse meddelelser, gæstebog og annoncer)
 module.ForumYouthIcons.q.desc=Tilføjer ikon for citat tags, hvis mangler
@@ -102,6 +103,7 @@ module.CopyPostID.desc=Giver et link til at kopiere et indlægs ID
 module.CopyPosting.desc=Tilføj ikon for at kopiere indlægget inkl. henvisninger
 module.ShowForumPrefButton.desc=Link til forum indstillinger på forum sider
 module.Links.desc=Grundlæggende modul afgørende for andre link moduler til at fungere ordentligt.
+module.Links.AddServer.desc=Tilføj alle GET links til din aktuelle hattrick server. Dette tillader muligvis eksterne sider at, linke korrekt tilbage til Hattrick. Sætter også cookies på nogle eksterne sider, der for eksempel indeholder "ht-server\=www77.hattrick.org" til samme formål(kun Mozilla og Chrome).
 module.LinksLeague.desc=Tilføjer eksterne links til liga siden
 module.LinksTeam.desc=Tilføjer eksterne links til hold siden
 module.LinksCountry.desc=﻿Tilføjer eksterne links til land siden
@@ -374,6 +376,10 @@ module.ShowLineupSet.Winning.desc=Fremhæve vindende hold
 module.SupporterStatsEnhancements.desc=Fremhæver nuværende spillere trup i supporter statistik
 module.MobileEnhancements.desc=Sæt med forbedringer til mobile enheder
 module.MatchOrderInterface.desc=Finjustere på kampordre inter-facet.
+module.MatchOrderInterface.GotTrainingOnField.desc=Spillere, der allerede har modtaget træning vil også blive markeret på banen (kun for supportere)
+module.MatchOrderInterface.DisplayLastMatchInDetails.desc=Viser oplysninger om den sidste kamp i detalje popup
+module.MatchOrderInterface.CloneOrder.desc=Tilføj et link til at klone ordrer
+module.MatchOrderInterface.AutoExpandCloned.desc=Udvid automatisk klonet ordrer
 module.MatchOrderInterface.Specialties.desc=Vis spillere specialiteter
 module.MatchOrderInterface.ShowFaces.desc=Vis spiller ansigter i stedet for dragter til fremtidige og gamle holdopstillinger
 module.MatchOrderInterface.StayOnPage.desc=Bliv på kampordre siden efter afgivning af ordre
@@ -391,19 +397,37 @@ module.RatingsDisplay.HatStats.desc=Som HatStats
 module.RatingsDisplay.HTSums.desc=Som Hattrick rating summer
 module.SafeForWork.desc=Erstatter ikonet og titelteksten til Hattrick faner for at se mindre mistænkelig ud. Kontroller, at du også deaktivere alle andre moduler, der kan være risikabel, især "advarsel" moduler.
 module.PlayerStatsExperience.desc=Viser erfaring underniveau på spillere statistik side
+module.PlayerStatsExperience.AlwaysShowAll.desc=Vis som standard så mange kampe som muligt, når du bruger links på spillere siden eller på præstations-historie siden
 module.YouthTwins.desc=Viser mængden af ​​mulige tvillinger for dine ungdomsspillere i forbindelse med Hattrick youthclub. Du behøver ikke at have en Hattrick youthclub konto for at bruge dette modul. Da viden om spilleransigter er afgørende for tvilling afsløring,er denne funktion kun nyttig for supportere.
+module.YouthTwins.HideInfoLink.desc=Deaktiver information link for nybegyndere
+module.FriendlyPool.desc=Farvelæg besøgte lande i venskabs pulje udvalget
 #accessability
+module.ARIALandmarks.desc=Tilføj ARIA mærkater til alle dele af hjemmesiden for at gøre navigationen lettere, når du bruger skærmlæsere
 
+module.TransferHistoryFilters.desc=Tilføjer filter for holdets transfer historie side 
 
 #htevprediction
+module.HTEVPrediction.desc=Viser kamp odds for ligakampe leveret af HTEV\: http\://htev.org (af furr_)
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
 
 #htev
+HTEVPrediction.home.short=H
+HTEVPrediction.away.short=U
+HTEVPrediction.tie.short=L
+HTEVPrediction.explainHome=Sandsynligheden for, at hjemmeholdet vinder
+HTEVPrediction.explainTie=Sandsynligheden for, at spillet vil ende uafgjort
+HTEVPrediction.explainAway=Sandsynligheden for, at udeholdet vinder
+HTEVPrediction.visitLeague=Besøg ligaen på http\://www.htev.org
+HTEVPrediction.visitDetailed=Få detaljerede oplysninger om denne kamp på http\://www.htev.org
 
 #transfer-history-filters
+TransferHistoryFilters.all=Alle
+TransferHistoryFilters.sold=Solgt
+TransferHistoryFilters.bought=Købt
+TransferHistoryFilters.filter=Filter\:
 
 #Loyalty display
 LoyaltyDisplay.motherClubBonus=(Moderklub bonus)
@@ -415,6 +439,7 @@ YouthTwins.markedTwins=Markeret som tvilling\: %1
 YouthTwins.nonTwins=Markeret som ikke-tvilling\: %1
 YouthTwins.undecidedTwins=Endnu ikke markeret\: %1
 YouthTwins.nonHyUser=Du kan finde ud af mere om hans potentiale ved hjælp af hattrick youthclub.
+YouthTwins.infoText=Hvad er tvillinger og hvordan kan jeg drage fordel af dem?
 
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceText=Han har allerede indsamlet mellem %1 og %2 ud af 28 rutine points. Hans rutine er mellem %3 og %4.
@@ -425,7 +450,26 @@ PlayerStatsExperience.ExperienceChange.title.abbr=RU+
 PlayerStatsExperience.Walkover=Denne kamp var en walkover. Derfor fik spillerne ikke nogen rutine point.
 
 
+PlayerStatsExperience.MatchesSinceSkilup=Kampe siden sidste evnestigning
+PlayerStatsExperience.matches=Kampe
+PlayerStatsExperience.minutes=Minutter
+PlayerStatsExperience.minXPpts=Min. XP Pts.
+PlayerStatsExperience.maxXPpts=Maks. XP Pts.
+PlayerStatsExperience.sum=Summen
+PlayerStatsExperience.Experience=Rutine
+PlayerStatsExperience.PerformanceHistory=Præstations historie
+PlayerStatsExperience.InternationalPercentage=Internationale venskabskampe i %\:
 
+PlayerStatsExperience.matchFriendly=Venskabskampe
+PlayerStatsExperience.matchInternationalFriendly=International
+PlayerStatsExperience.matchNationalFriendly=Nationale
+PlayerStatsExperience.matchCup=Cup
+PlayerStatsExperience.matchQualification=Kvalifikation
+PlayerStatsExperience.matchLeague=Liga
+PlayerStatsExperience.matchNtFriendly=Landsholds venskabskampe
+PlayerStatsExperience.matchMasters=Hattrick Masters
+PlayerStatsExperience.matchNtLeague=VM
+PlayerStatsExperience.matchNtFinals=VM (semi-) finaler
 
 #Series statistics
 rating.average=Gennemsnitsvurdering
@@ -641,6 +685,14 @@ matchOrder.home=Hjemme
 matchOrder.home.abbr=H
 matchOrder.away=Ude
 matchOrder.away.abbr=U
+matchOrder.cloneOrder=Klon denne ordre
+matchOrder.cloneOrder.abbr=C
+matchOrder.cloneAsSub=Klon og konvertere til indskiftning
+matchOrder.cloneAsSub.abbr=S
+matchOrder.cloneAsSwap=Klon og konverter til positions bytte
+matchOrder.cloneAsSwap.abbr=Sw
+matchOrder.cloneAsChange=Klon og konvertere til indstillings ændring
+matchOrder.cloneAsChange.abbr=B
 
 #Skills
 Playmaking=Spilfordeling
@@ -889,6 +941,9 @@ copy.fixturesSource.copied=Kildekode til Kampprogram er blevet kopieret.
 
 #matches
 matches.income=Indtægter\:
+matches.playedHome=Spillede hjemme
+matches.playedAway=Spillede ude
+matches.playedHomeAway=Spillede hjem og ude
 
 matches.attackdefensebars=Angreb vs forsvar
 matches.right=Højre
@@ -1075,6 +1130,7 @@ button.copy=kopiere
 button.up=Op
 button.down=Ned
 button.goto=Gå til %s
+button.play=Afspil
 
 
 status.loading=Indlæser...
@@ -1152,6 +1208,7 @@ tab.alert=Notifikationer
 tab.about=Om
 tab.changes=Ændringer
 tab.help=Hjælp
+tab.accessibility=Tilgængelighed
 
 prefs.setup=Setup
 prefs.setup.desc=Disse er dine indstillinger som FoxTrick har registreret. Hvis de er forkerte, {indrapporter}.
@@ -1206,6 +1263,7 @@ link.recentChanges=Seneste ændringer
 releaseNotes.show=Vis versionsnoter efter hver opdatering
 releaseNotes.showFor=Vis Versionsnoter for\:
 releaseNotes.version=Version\:
+releaseNotes.translationStatus=Dit sprog er %s% oversat.
 
 about.copyright=Ophavsret
 about.maintainers=﻿Vedligeholdere
@@ -1217,6 +1275,7 @@ prefs.restoreDefault.ask=Er du sikker på du vil gendanne standardindstillingern
 prefs.deleteToken.ask=Slet OAuth token/hemmeligt for HoldID %s?
 prefs.disableAllModules.ask=Er du sikker på du vil deaktivere alle moduler?
 prefs.revokePermissions.ask=Er du sikker på du vil tilbagekalde alle valgfri tilladelser?
+prefs.needPermissions=Der er aktiveret muligheder, som har brug for yderligere tilladelser til at arbejde. Gem indstillingerne og tillad eller afvis adgang i følgende dialogboks. Mulighederne er\:
 
 ###EOF
 
