--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -58,7 +58,7 @@ module.HTDateFormat.FirstDayOfWeekOffset.desc=Einen anderen Tag als Wochenanfang
 module.StaffMarker.desc=Hervorhebung von Namen der Offiziellen im Forum.
 module.StaffMarker.manager.desc=Offizielle auf der Team-Seite hervorheben
 module.StaffMarker.own.desc=Eigene Aliase
-module.StaffMarker.external.desc=Mitarbeiter andere CHPP-Anwendungen markieren
+module.StaffMarker.external.desc=Mitarbeiter anderer CHPP-Anwendungen markieren
 #ForumYouthIcons
 module.ForumYouthIcons.desc=Anzeige einer Linkleiste für das Jugendinternat
 module.ForumYouthIcons.q.desc=Icon für Zitiern hinzufügen falls nicht vorhaden
@@ -377,7 +377,7 @@ module.SupporterStatsEnhancements.desc=Markierung für Spieler des aktuellen Tea
 module.MobileEnhancements.desc=Set von Erweiterungen für mobile Geräte
 module.MatchOrderInterface.desc=Verbesserungen der Aufstellungsseite
 module.MatchOrderInterface.GotTrainingOnField.desc=Spieler die bereits Training erhalten haben werden auch auf dem Spielfeld markiert (Nur für Supporter)
-module.MatchOrderInterface.CloneOrder.desc=Fügt Links hinzu um Anweisung zu klonen
+module.MatchOrderInterface.CloneOrder.desc=Fügt Links hinzu mit denen Anweisung geklont werden können
 module.MatchOrderInterface.AutoExpandCloned.desc=Geklonte Anweisungen automatisch ausklappen
 module.MatchOrderInterface.Specialties.desc=Zeige Spezialfähigkeiten
 module.MatchOrderInterface.ShowFaces.desc=Das Trikot durch das Passbild des Spielers ersetzen
@@ -396,7 +396,7 @@ module.RatingsDisplay.HatStats.desc=Als HatStats
 module.RatingsDisplay.HTSums.desc=Als Hattricks Bewertungssumme
 module.SafeForWork.desc=Ersetzt Icon und Titel von Hattrick Tabs um sie zB auf Arbeit weniger auffällig zu machen. Gegebenenfalls solltest Du zusätzlich die Alarmmodule deaktivieren.
 module.PlayerStatsExperience.desc=Sublevel der Erfahrung auf der Spielerstatistik-Seite anzeigen
-module.PlayerStatsExperience.AlwaysShowAll.desc=Automatisch alle möglichen Spiele anzeigen wenn man die Seite über die Links auf der Spieler- bzw. der Leistungsentwicklungsseite betritt
+module.PlayerStatsExperience.AlwaysShowAll.desc=Automatisch alle möglichen Spiele anzeigen wenn die Seite über die Links auf der Spieler- bzw. der Leistungsentwicklungsseite betreten wird
 module.YouthTwins.desc=Zeigt in Zusammenarbeit mit hattrick youthclub an wieviele potentielle Zwillinge deine Jugendspieler haben könnten. Um dieses Modul nutzen zu können musst du über KEINEN hattrick youthclub Account verfügen. Allerdings ist dieses Modul nur für vorwiegend Supporter sinnvoll da zur Erkennung potentieller Zwillinge die Spielergesichter bekannt sein müssen, was ein Privileg der Supporterschaft ist.
 module.YouthTwins.HideInfoLink.desc=Informationssymbol für Neueinsteiger ausblenden
 #accessability
@@ -449,8 +449,11 @@ PlayerStatsExperience.Walkover=Der Gegner trat zu diesem Spiel nicht an (Walkove
 PlayerStatsExperience.MatchesSinceSkilup=Spiele seit dem letzten Skill-Up
 PlayerStatsExperience.matches=Spiele
 PlayerStatsExperience.minutes=Spielminuten
+PlayerStatsExperience.minXPpts=Min. XP Pkt.
+PlayerStatsExperience.maxXPpts=Max. XP Pkt.
 PlayerStatsExperience.sum=Summe
 PlayerStatsExperience.Experience=Erfahrung
+PlayerStatsExperience.PerformanceHistory=Leistungsentwicklung
 PlayerStatsExperience.InternationalPercentage=Anteil internationaler Freundschaftsspiele in %\:
 
 PlayerStatsExperience.matchFriendly=Freundschaftsspiele
