--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -395,6 +395,7 @@ module.PlayerStatsExperience.desc=Tapasztalat töredékszintjének megjeleníté
 module.YouthTwins.desc=A hattrick youthclub-bal együttműködve megjeleníti az ifijátékosaid lehetséges ikerpárjait. Nincs szükséged hattrick youthclub hozzáféréshez ehhez a modulhoz. Mivel az ikrek azonosításához elengedhetetlen a játékosok arcképének ismerete, ezért a funkció csak támogatók részére hasznos.
 #accessability
 
+module.TransferHistoryFilters.desc=Szűrők hozzáadása az átigazolási archívumhoz 
 
 #htevprediction
 # -----------------------------------------------------------------------------
@@ -403,8 +404,15 @@ module.YouthTwins.desc=A hattrick youthclub-bal együttműködve megjeleníti az
 # IN-GAME STRINGS. translate first
 
 #htev
+HTEVPrediction.home.short=H
+HTEVPrediction.away.short=I
+HTEVPrediction.tie.short=D
 
 #transfer-history-filters
+TransferHistoryFilters.all=Összes
+TransferHistoryFilters.sold=Eladott
+TransferHistoryFilters.bought=Vásárolt
+TransferHistoryFilters.filter=Szűrő\:
 
 #Loyalty display
 LoyaltyDisplay.motherClubBonus=(Anyaegyesületi bevétel)
@@ -426,7 +434,25 @@ PlayerStatsExperience.ExperienceChange.title.abbr=TAP+
 PlayerStatsExperience.Walkover=Játék nélküli győzelem, ezért a játékosok nem kaptak tapasztalatot.
 
 
+PlayerStatsExperience.matches=Mérkőzések
+PlayerStatsExperience.minutes=Perc
+PlayerStatsExperience.minXPpts=Min. XP pont
+PlayerStatsExperience.maxXPpts=Max XP pont
+PlayerStatsExperience.sum=Összesen
+PlayerStatsExperience.Experience=Tapasztalat
+PlayerStatsExperience.PerformanceHistory=Korábbi teljesítmény
+PlayerStatsExperience.InternationalPercentage=Nemzetközi barátságok mérkőzés aránya %-ban\:
 
+PlayerStatsExperience.matchFriendly=Barátságos mérkőzések
+PlayerStatsExperience.matchInternationalFriendly=Nemzetközi
+PlayerStatsExperience.matchNationalFriendly=Hazai
+PlayerStatsExperience.matchCup=Kupa
+PlayerStatsExperience.matchQualification=Osztályozó
+PlayerStatsExperience.matchLeague=Bajnoki
+PlayerStatsExperience.matchNtFriendly=NT barátságos mérkőzések
+PlayerStatsExperience.matchMasters=Hattrick Masters
+PlayerStatsExperience.matchNtLeague=Világbajnokság
+PlayerStatsExperience.matchNtFinals=Világbajnokság (elő-)döntő
 
 #Series statistics
 rating.average=Átlagértékelés
@@ -642,6 +668,10 @@ matchOrder.home=Hazai
 matchOrder.home.abbr=H
 matchOrder.away=Idegenben
 matchOrder.away.abbr=I
+matchOrder.cloneOrder.abbr=U
+matchOrder.cloneAsSub.abbr=Cs
+matchOrder.cloneAsSwap.abbr=Pcs
+matchOrder.cloneAsChange.abbr=I
 
 #Skills
 Playmaking=Játékszervezés
@@ -890,6 +920,9 @@ copy.fixturesSource.copied=Mérkőzések forrása kimásolva.
 
 #matches
 matches.income=Bevétel\:
+matches.playedHome=Hazai mérkőzés
+matches.playedAway=Idegenbeli mérkőzés
+matches.playedHomeAway=Otthon és idegenben is lejátszott
 
 matches.attackdefensebars=Támadás kontra védekezés
 matches.right=Jobb oldal
@@ -1076,6 +1109,7 @@ button.copy=Másolás
 button.up=Fel
 button.down=Le
 button.goto=Ugrás\: %s
+button.play=Lejátszás
 
 
 status.loading=Betöltés...
@@ -1207,6 +1241,7 @@ link.recentChanges=A legutóbbi módosítások
 releaseNotes.show=A FoxTrick-frissítések utáni kiadási megjegyzések megjelenítése
 releaseNotes.showFor=Kiadási megjegyzések megjelenítése a következőhöz\:
 releaseNotes.version=Verzió\:
+releaseNotes.translationStatus=Ez a nyelv %s%-ban lefordított.
 
 about.copyright=Copyright
 about.maintainers=Üzemeltetők
