--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -58,6 +58,7 @@ module.HTDateFormat.FirstDayOfWeekOffset.desc=Utilizeaza setari personale pentru
 module.StaffMarker.desc=Marchează nickname-urile oficialilor pe forum.
 module.StaffMarker.manager.desc=Marchează oficialii pe paginile echipelor.
 module.StaffMarker.own.desc=Marcaje personale
+module.StaffMarker.external.desc=Marchează staff-ul altor aplicații CHHP
 #ForumYouthIcons
 module.ForumYouthIcons.desc=Afișează link-uri pentru academia de tineret (funcționează și în cazul mesajelor, anunțurilor de presă)
 module.ForumYouthIcons.q.desc=Adaugă pictogramă pentru quote dacă lipsește
@@ -103,6 +104,7 @@ module.CopyPostID.desc=Copiaza Id-ul postului in clipboard in loc sa-l afiseze p
 module.CopyPosting.desc=Adauga o iconita pentru a copia mesajul si referintele inclusiv
 module.ShowForumPrefButton.desc=Link catre setarile forumului pe toate paginile forum
 module.Links.desc=Modul de baza esential pentru ca toate celelalte module sa functioneze corect.
+module.Links.AddServer.desc=Adaugă serverul HT actual link-urilor GET. Aceasta ar putea activa pagini externe pentru a pune înapoi la Hattrick link-urile. De asemenea pune cookies-urile la o pagină externă, de exemplu\: "ht-server\=www77.hattrick.org" pentru aceleași scopuri (doar Mozilla și Chrome).
 module.LinksLeague.desc=Adauga legaturi externe la pagina seriei
 module.LinksTeam.desc=Adauga legaturi externe la pagina echipei
 module.LinksCountry.desc=Adauga legaturi externe la pagina tarii
@@ -375,6 +377,10 @@ module.ShowLineupSet.Winning.desc=Evidentiaza echipele castigatoare
 module.SupporterStatsEnhancements.desc=Evidentiaza jucatorii actuali in statisticile supporter
 module.MobileEnhancements.desc=Set de imbunatatiri pentru mobile
 module.MatchOrderInterface.desc=Setari pe interfata de ordine meci. 
+module.MatchOrderInterface.GotTrainingOnField.desc=Jucătorii care au primit deja antrenament vor fi, de asemenea, marcați pe terenul de joc (doar pentru suporteri)
+module.MatchOrderInterface.DisplayLastMatchInDetails.desc=Afișează informații despre ultimul meci în popup-ul detalii
+module.MatchOrderInterface.CloneOrder.desc=Adăugați o legătură pentru ordinele clonate
+module.MatchOrderInterface.AutoExpandCloned.desc=Extinde automat ordinele clonate
 module.MatchOrderInterface.Specialties.desc=Arata specialitatile jucatorilor
 module.MatchOrderInterface.ShowFaces.desc=Arată fețele jucătorilor în loc de tricourile de joc pentru formațiile de joc aliniate în trecut sau în viitor
 module.MatchOrderInterface.StayOnPage.desc=Ramai in pagina de ordine meci dupa salvare
@@ -392,19 +398,37 @@ module.RatingsDisplay.HatStats.desc=Ca HatStats
 module.RatingsDisplay.HTSums.desc=Ca sumă ratinguri Hattrick
 module.SafeForWork.desc=Inlocuieste pictograma si titlul tab-urilor Hattrick pentru a arata mai putin suspecte. Asigura-te ca dezactivezi toate modulele care ar putea fi riscante, mai ales modulele "Alert".
 module.PlayerStatsExperience.desc=Afișează subskill-ul experienței pe pagina playerStats
+module.PlayerStatsExperience.AlwaysShowAll.desc=Arată cât mai multe meciuri posibile când sunt folosite link-urile de pe pagina jucătorilor sau pagina cu istoria performanțelor
 module.YouthTwins.desc=Afișează numărulul de gemeni posibili pentru juniori coroborat cu hattrick youthclub. Nu ai nevoie de cont hattrick youthclub pentru a folosi acest modul. Din moment ce cunoștințele despre fețele jucătorilor sunt foarte importante pentru a detecta gemeni această opțiune este folositoare doar pentru cei care posedă pachetul Supporter.
+module.YouthTwins.HideInfoLink.desc=Dezactivează link-ul de informații pentru noii veniți
+module.FriendlyPool.desc=Colorați țările vizitate în piscina pentru amicale
 #accessability
+module.ARIALandmarks.desc=Adaugă roluri ARIA landmark tuturor selecțiilor ale site-ului pentru a ușura navigarea
 
+module.TransferHistoryFilters.desc=Adaugă opțiuni de filtrare pe pagina istoriei transferurilor echipei 
 
 #htevprediction
+module.HTEVPrediction.desc=Afișează cote pentru meciurile de campionat provenite de la HTEV\: http\://htev.org (de furr_)
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
 
 #htev
+HTEVPrediction.home.short=A
+HTEVPrediction.away.short=D
+HTEVPrediction.tie.short=X
+HTEVPrediction.explainHome=Probabilitatea ca echipa gazdă să câștige
+HTEVPrediction.explainTie=Probabilitatea ca meciul să se încheie la egalitate
+HTEVPrediction.explainAway=Probabilitatea ca echipa vizitatoare să câștige
+HTEVPrediction.visitLeague=Vizitează liga pe http\://www.htev.org
+HTEVPrediction.visitDetailed=Obține informații detaliate despre acest meci pe http\://www.htev.org
 
 #transfer-history-filters
+TransferHistoryFilters.all=Toate
+TransferHistoryFilters.sold=Vânduți
+TransferHistoryFilters.bought=Cumpărați
+TransferHistoryFilters.filter=Filtru\:
 
 #Loyalty display
 LoyaltyDisplay.motherClubBonus=(Bonus club mamă)
@@ -416,6 +440,7 @@ YouthTwins.markedTwins=Marcat ca geamăn\: %1
 YouthTwins.nonTwins=Marcat ca non-geamăn\: %1
 YouthTwins.undecidedTwins=Nemarcat încă\: %1
 YouthTwins.nonHyUser=Ai putea afla mai multe despre potențialul lui folosind hattrick youthclub.
+YouthTwins.infoText=Ce sunt gemenii și cum pot beneficia de ei?
 
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceText=El deja a colectat între %1 și %2 din 28 puncte de experiență. Experiența lui este între %3 și %4.
@@ -426,7 +451,26 @@ PlayerStatsExperience.ExperienceChange.title.abbr=XP+
 PlayerStatsExperience.Walkover=Acest joc a fost forfait. Astfel jucătorii nu au primit experiență.
 
 
+PlayerStatsExperience.MatchesSinceSkilup=Meciuri de la ultima creștere a calității
+PlayerStatsExperience.matches=Meciuri
+PlayerStatsExperience.minutes=Minute
+PlayerStatsExperience.minXPpts=Pct. min. XP.
+PlayerStatsExperience.maxXPpts=Pct. max. XP.
+PlayerStatsExperience.sum=Sumă
+PlayerStatsExperience.Experience=Experiență
+PlayerStatsExperience.PerformanceHistory=Istoricul performanțelor
+PlayerStatsExperience.InternationalPercentage=Amicale internaționale în %\:
 
+PlayerStatsExperience.matchFriendly=Amicale
+PlayerStatsExperience.matchInternationalFriendly=Internațional
+PlayerStatsExperience.matchNationalFriendly=Național
+PlayerStatsExperience.matchCup=Cupă
+PlayerStatsExperience.matchQualification=Baraj
+PlayerStatsExperience.matchLeague=Campionat
+PlayerStatsExperience.matchNtFriendly=Amicale NT
+PlayerStatsExperience.matchMasters=Hattrick Masters
+PlayerStatsExperience.matchNtLeague=Cupa Mondială
+PlayerStatsExperience.matchNtFinals=(Semi-) finale Cupa Mondială
 
 #Series statistics
 rating.average=Rating mediu
@@ -642,6 +686,14 @@ matchOrder.home=Gazdă
 matchOrder.home.abbr=A
 matchOrder.away=Deplasare
 matchOrder.away.abbr=D
+matchOrder.cloneOrder=Clonează aceste ordine
+matchOrder.cloneOrder.abbr=C
+matchOrder.cloneAsSub=Clonează și convertește ca înlocuire
+matchOrder.cloneAsSub.abbr=S
+matchOrder.cloneAsSwap=Clonează și convertește ca schimb
+matchOrder.cloneAsSwap.abbr=Sc
+matchOrder.cloneAsChange=Clonează și convertește ca schimbare de comportament
+matchOrder.cloneAsChange.abbr=B
 
 #Skills
 Playmaking=Construcție
@@ -890,6 +942,9 @@ copy.fixturesSource.copied=Sursa meciurilor urmatoare a fost copiata.
 
 #matches
 matches.income=Venituri\:
+matches.playedHome=Jucate acasă
+matches.playedAway=Jucate în deplasare
+matches.playedHomeAway=Jucate acasă și în deplasare
 
 matches.attackdefensebars=Atac vs Aparare
 matches.right=Dreapta
@@ -1076,6 +1131,7 @@ button.copy=Copiaza
 button.up=Up
 button.down=Down
 button.goto=Mergi la %s.
+button.play=Interpretează
 
 
 status.loading=Incarca…
@@ -1153,6 +1209,7 @@ tab.alert=Alerte
 tab.about=Despre
 tab.changes=Modificari
 tab.help=Ajutor
+tab.accessibility=Accesibilitate
 
 prefs.setup=Configurare
 prefs.setup.desc=Acestea sunt setarile pe care FoxTrick le-a detectat. Daca sunt incorecte {va rugam raportati}.
@@ -1207,6 +1264,7 @@ link.recentChanges=Schimbari recente
 releaseNotes.show=Arata notele lansarii dupa fiecare update
 releaseNotes.showFor=Arata notele lansarii pentru\:
 releaseNotes.version=Versiune\:
+releaseNotes.translationStatus=Limba ta este %s% tradusă.
 
 about.copyright=Copyright
 about.maintainers=Intretinatori
@@ -1218,6 +1276,7 @@ prefs.restoreDefault.ask=Esti sigur ca vrei sa restaurezi setarile implicite?
 prefs.deleteToken.ask=Stergere OAuth jeton / secret pentru teamid %s?
 prefs.disableAllModules.ask=Esti sigur ca vrei sa dezactivezi toate modulele?
 prefs.revokePermissions.ask=Esti sigur ca vrei sa revoci toate permisiunile optionale?
+prefs.needPermissions=Există opțiuni activate care necesită permisiunea pentru a funcționa. Salvează preferințele și permite sau refuză accesul în următorul dialog. Acele opțiuni sunt\:
 
 ###EOF
 
