*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.10.0@9943 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -453,8 +453,8 @@ PlayerStatsExperience.Walkover=Denne kamp var en walkover. Derfor fik spillerne 
 PlayerStatsExperience.MatchesSinceSkilup=Kampe siden sidste evnestigning
 PlayerStatsExperience.matches=Kampe
 PlayerStatsExperience.minutes=Minutter
-PlayerStatsExperience.minXPpts=Min. XP Pts.
-PlayerStatsExperience.maxXPpts=Maks. XP Pts.
+PlayerStatsExperience.minXPpts=Min. rutine Pts.
+PlayerStatsExperience.maxXPpts=Maks. rutine Pts.
 PlayerStatsExperience.sum=Summen
 PlayerStatsExperience.Experience=Rutine
 PlayerStatsExperience.PerformanceHistory=Præstations historie
