--- a/content/locale/es-AR/foxtrick.properties
+++ b/content/locale/es-AR/foxtrick.properties
@@ -57,6 +57,7 @@ module.HTDateFormat.FirstDayOfWeekOffset.desc=Usar una configuración personal, 
 module.StaffMarker.desc=Resaltar los nicks de miembros del staff dentro de la conferencia y página del equipo.
 module.StaffMarker.manager.desc=Resaltar los nicks de miembros del staff en la página del equipo
 module.StaffMarker.own.desc=Marcadores personales
+module.StaffMarker.external.desc=Marcar miembros de otras aplicaciones CHPP
 #ForumYouthIcons
 module.ForumYouthIcons.desc=Muestra una barra con enlaces para la academia de juveniles (También funciona para correo, anuncios de prensa, libro de visitas y anuncios)
 module.ForumYouthIcons.q.desc=Añade un icono para las etiquetas de Citar si faltan
@@ -102,6 +103,7 @@ module.CopyPostID.desc=Enlace para copiar el ID de un Post.
 module.CopyPosting.desc=Añade un icono para copiar el mensaje incluyendo referencias
 module.ShowForumPrefButton.desc=Muestra un atajo a las preferencias del foro en todas las páginas del foro
 module.Links.desc=Módulo básico, esencial para que otros módulos relacionados funcionen correctamente.
+module.Links.AddServer.desc=Agregar el servidor actual de Hattrick todos los vínculos GET. Esto podría permitir las páginas establecer los vínculos a Hattrick correctamente. También establece cookies en algunas páginas que contengan eg "ht-server\=www77.hattrick.org" para el mismo propósito (Mozilla y Chrome sólo).
 module.LinksLeague.desc=Añadir algunos enlaces externos en la página de la liga
 module.LinksTeam.desc=Añadir algunos enlaces externos en la página del equipo
 module.LinksCountry.desc=Añadir algunos enlaces externos en la página del país
@@ -374,6 +376,10 @@ module.ShowLineupSet.Winning.desc=Resaltar equipos que ganaron su partido
 module.SupporterStatsEnhancements.desc=Resalta a los jugadores del equipo actual en las estadísticas de supporter
 module.MobileEnhancements.desc=Conjunto de mejoras para dispositivos móviles
 module.MatchOrderInterface.desc=Ajustes en la interfaz de orden del partido. 
+module.MatchOrderInterface.GotTrainingOnField.desc=Jugadores que ya han recibido entrenamiento también se marcarán en el campo de juego (sólo para supporters)
+module.MatchOrderInterface.DisplayLastMatchInDetails.desc=Muestra información sobre el último partido en la ventana emergente de detalles
+module.MatchOrderInterface.CloneOrder.desc=Agregar un vínculo para clonar las órdenes
+module.MatchOrderInterface.AutoExpandCloned.desc=Expandir automáticamente orden clonada
 module.MatchOrderInterface.Specialties.desc=Mostrar especialidad jugadores
 module.MatchOrderInterface.ShowFaces.desc=Mostrar las caras de los jugadores en vez de la remera para alineaciones viejas y futuras
 module.MatchOrderInterface.StayOnPage.desc=Quedarse en la página de órdenes del partido después de guardar la alineación
@@ -391,19 +397,37 @@ module.RatingsDisplay.HatStats.desc=Como HatStats
 module.RatingsDisplay.HTSums.desc=Como sumas de calificaciones de Hattrick
 module.SafeForWork.desc=Remplazar iconos y el texto del título de las pestañas de Hattrick
 module.PlayerStatsExperience.desc=Muestra el subnivel de experiencia en la página playerStats
+module.PlayerStatsExperience.AlwaysShowAll.desc=Mostrar  todos los partidos que sean posibles cuando se utilizan los vínculos en la página de jugadores o la página de historial de rendimiento
 module.YouthTwins.desc=Muestra la cantidad de gemelos posibles en tu equipo de juveniles en conjunción con hattrick youthclub. No se necesita tener una cuenta en hattick youthclub para usar este módulo. Debido a que es crucial conocer la cara de los jugadores para la detección de los gemelos, ésta característica es sólo útil para los supporters.
+module.YouthTwins.HideInfoLink.desc=Deshabilitar vínculo de información para los recién llegados
+module.FriendlyPool.desc=Colorear países visitados en el combo de selección de amistoso
 #accessability
+module.ARIALandmarks.desc=Agregar roles ARIA a todas las secciones del sitio para hacer la navegación más fácil cuando se utiliza lectores de pantalla
 
+module.TransferHistoryFilters.desc=Agregar filtros a la página de historial de transferencia de equipo 
 
 #htevprediction
+module.HTEVPrediction.desc=Muestra probabilidades para partidos de la Liga proporcionados por HTEV\: http\://htev.org (por furr_)
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
 
 #htev
+HTEVPrediction.home.short=L
+HTEVPrediction.away.short=V
+HTEVPrediction.tie.short=E
+HTEVPrediction.explainHome=Probabilidad de que el equipo local gane
+HTEVPrediction.explainTie=Probabilidad de que el partido termine empatado
+HTEVPrediction.explainAway=Probabilidad de que el equipo visitante gane
+HTEVPrediction.visitLeague=Visita la Liga en http\://www.htev.org
+HTEVPrediction.visitDetailed=Obtener información detallada acerca de este partido en http\://www.htev.org
 
 #transfer-history-filters
+TransferHistoryFilters.all=Todos
+TransferHistoryFilters.sold=Vendido
+TransferHistoryFilters.bought=Comprado
+TransferHistoryFilters.filter=Filtro\:
 
 #Loyalty display
 LoyaltyDisplay.motherClubBonus=(Bono club origen)
@@ -415,6 +439,7 @@ YouthTwins.markedTwins=Marcado como gemelo\: %1
 YouthTwins.nonTwins=Marcado como no-gemelo\: %1
 YouthTwins.undecidedTwins=Aún no se ha marcado\: %1
 YouthTwins.nonHyUser=Podes averiguar mas acerca del potencial usando hattrick youthclub.
+YouthTwins.infoText=¿Qué son los gemelos y cómo puedo beneficiarse de ellos?
 
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceText=Ya ganó entre %1 y %2 de 28 puntos de experiencia. Su experiencia está entre %3 y %4.
@@ -425,7 +450,26 @@ PlayerStatsExperience.ExperienceChange.title.abbr=EX+
 PlayerStatsExperience.Walkover=Este juego fue suspendido. Por lo tanto los jugadores no ganaron experiencia.
 
 
+PlayerStatsExperience.MatchesSinceSkilup=Partidos desde la última subida de habilidad
+PlayerStatsExperience.matches=Partidos
+PlayerStatsExperience.minutes=Minutos
+PlayerStatsExperience.minXPpts=Min ptos XP.
+PlayerStatsExperience.maxXPpts=Max ptos. XP
+PlayerStatsExperience.sum=Suma
+PlayerStatsExperience.Experience=Experiencia
+PlayerStatsExperience.PerformanceHistory=Historial de rendimiento
+PlayerStatsExperience.InternationalPercentage=Amistosos internacionales en %\:
 
+PlayerStatsExperience.matchFriendly=Amistosos
+PlayerStatsExperience.matchInternationalFriendly=Internacional
+PlayerStatsExperience.matchNationalFriendly=Selección Nacional
+PlayerStatsExperience.matchCup=Copa
+PlayerStatsExperience.matchQualification=Promoción
+PlayerStatsExperience.matchLeague=liga
+PlayerStatsExperience.matchNtFriendly=Amistosos de Sel.
+PlayerStatsExperience.matchMasters=Hattrick Masters
+PlayerStatsExperience.matchNtLeague=Copa mundial
+PlayerStatsExperience.matchNtFinals=(Semi-)finales Copa Mundial
 
 #Series statistics
 rating.average=Calificaciones promedio
@@ -641,6 +685,14 @@ matchOrder.home=Local
 matchOrder.home.abbr=L
 matchOrder.away=Visitante
 matchOrder.away.abbr=V
+matchOrder.cloneOrder=Clonar esta orden
+matchOrder.cloneOrder.abbr=C
+matchOrder.cloneAsSub=Clonar y convertir a sustitución
+matchOrder.cloneAsSub.abbr=S
+matchOrder.cloneAsSwap=Clon y convertir a intercambio
+matchOrder.cloneAsSwap.abbr=I
+matchOrder.cloneAsChange=Clonar y convertir a cambio comportamiento
+matchOrder.cloneAsChange.abbr=C
 
 #Skills
 Playmaking=Jugadas
@@ -889,6 +941,9 @@ copy.fixturesSource.copied=El código de la clasificación ha sido copiado
 
 #matches
 matches.income=Ingreso\:
+matches.playedHome=Jugado local
+matches.playedAway=Jugado visitante
+matches.playedHomeAway=Jugado local y visitante
 
 matches.attackdefensebars=Comparación Ataque vs Defensa
 matches.right=Derecha
@@ -1075,6 +1130,7 @@ button.copy=Copiar
 button.up=Arriba
 button.down=Abajo
 button.goto=Ir a %s
+button.play=Reproducir
 
 
 status.loading=Cargando…
@@ -1152,6 +1208,7 @@ tab.alert=Alerta
 tab.about=Acerca de
 tab.changes=Cambios
 tab.help=Ayuda
+tab.accessibility=Accesibilidad
 
 prefs.setup=Configuración
 prefs.setup.desc=Estos son los parámetros que detectó FoxTrick. Si no es correcto, {please report}.
@@ -1206,6 +1263,7 @@ link.recentChanges=Cambios recientes
 releaseNotes.show=Mostrar notas de la versión luego de que Foxtrick se actualice
 releaseNotes.showFor=Notas de la versión para\:
 releaseNotes.version=Versión\:
+releaseNotes.translationStatus=Su lenguaje esta %s% traducido.
 
 about.copyright=Copyright
 about.maintainers=Responsables de mantenimiento
@@ -1217,6 +1275,7 @@ prefs.restoreDefault.ask=¿Estas seguro que deseas restaurar los valores predete
 prefs.deleteToken.ask=¿Estás seguro que deseas borrar el token OAuth para los equipos\: %s?
 prefs.disableAllModules.ask=¿Estas seguro que deseas deshabilitar todos los módulos?\n
 prefs.revokePermissions.ask=¿Está seguro que desea revocar todos los permisos opcionales?
+prefs.needPermissions=Hay opciones activan que necesitan permisos adicionales para trabajar. Guardar las preferencias y permita o rechace el acceso en el siguiente cuadro de diálogo. Las opciones son\:
 
 ###EOF
 
