--- a/content/locale/pt-BR/foxtrick.properties
+++ b/content/locale/pt-BR/foxtrick.properties
@@ -604,7 +604,7 @@ Last_position.abbr=Pos
 #following string uses pluralForms
 Last_match_played_as_at=Jogou %1 min como %2 em sua última partida em %3.
 Bruised=Lesionado mas jogando
-Bruised.abbr=BA
+Bruised.abbr=MMJ
 Injured=Lesionado
 Injured.abbr=Les
 Salary=Salário
@@ -888,9 +888,9 @@ button.add=Adicionar
 button.remove=Remover
 button.top=Topo
 button.authorize=Autorizar
-button.export=Salvar
-button.import=Carregar
-button.restoreDefault=apagar tudo
+button.export=Exportar
+button.import=Importar
+button.restoreDefault=Restaurar padrão
 button.deleteToken=Excluir token
 button.disableAll=Desabilitar tudo
 button.revokePermissions=Revogar permissões
@@ -957,7 +957,7 @@ module.screenshot=Screenshot
 
 # tabs in preferences page
 #tabs
-tab.main=Menu de Opções
+tab.main=Principal
 tab.on_page=Módulos nesta página
 tab.universal=Módulos universais
 tab.informationAggregation=Agregação de informações
