--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -59,6 +59,7 @@ module.HTDateFormat.FirstDayOfWeekOffset.desc=Gebruik een aangepaste eerste dag 
 module.StaffMarker.desc=Markeer gebruikers op het forum en teampagina's, die tot de Hattrick Officials behoren
 module.StaffMarker.manager.desc=Markeer de alias van officials op teampagina's
 module.StaffMarker.own.desc=Persoonlijke markeringen
+module.StaffMarker.external.desc=Markeer ontwikkelaars van andere CHPP apps
 #ForumYouthIcons
 module.ForumYouthIcons.desc=Toon een balk met links voor de jeugdopleiding op het forum (werkt ook in HT mail, persberichten, advertenties en gastenboek)
 module.ForumYouthIcons.q.desc=Toon icoon voor aanhalingstekens als deze er niet zijn
@@ -376,6 +377,10 @@ module.ShowLineupSet.Winning.desc=Markeer teams die in de vorige ronde hun wedst
 module.SupporterStatsEnhancements.desc=Markeer eigen spelers in supporter statistieken
 module.MobileEnhancements.desc=Verbeteringen voor mobiele toestellen
 module.MatchOrderInterface.desc=Aanpassingen van de opstellings-pagina.
+module.MatchOrderInterface.GotTrainingOnField.desc=Spelers die reeds training hebben gekregen, worden gemarkeerd op het speelveld (alleen voor supporters)
+module.MatchOrderInterface.DisplayLastMatchInDetails.desc=Laat informatie over de laatste wedstrijd zien in de detail pop-up
+module.MatchOrderInterface.CloneOrder.desc=Voeg een link toe om wissels te kopiëren
+module.MatchOrderInterface.AutoExpandCloned.desc=Automatisch gekopieerde wissels openen
 module.MatchOrderInterface.Specialties.desc=Laat spelers' specialiteiten zien
 module.MatchOrderInterface.ShowFaces.desc=Laat spelers gezichten zien ipv shirts voor alle opstellingen
 module.MatchOrderInterface.StayOnPage.desc=Blijf op de opstellings-pagina na opslaan
@@ -393,9 +398,14 @@ module.RatingsDisplay.HatStats.desc=Als HatStats
 module.RatingsDisplay.HTSums.desc=zoals Hattrick ratings sommeert
 module.SafeForWork.desc=Vervangt het pictogram en de titeltekst van de Hattrick tabbladen om minder verdacht te lijken. Zorg ervoor dat u alle andere modules die riskant zijn, vooral de "Alert" modules, ook uitschakelt.
 module.PlayerStatsExperience.desc=Geeft de ervaring subskill op de playerStats pagina
+module.PlayerStatsExperience.AlwaysShowAll.desc=Laat zo veel mogelijk wedstrijden standaard zien als de links op de spelers pagina of de prestatie geschiedenis pagina gebruikt worden
 module.YouthTwins.desc=Laat het aantal mogelijke tweelingen zien van je jeugdspelers. Gebruikt hattrick youthclub voor data. Je hebt geen account bij hattrick youthclub nodig om deze module te gebruiken. Omdat het heel belangrijk is dat het gezicht van de spelers zichtbaar is, is dit alleen voor supporters.
+module.YouthTwins.HideInfoLink.desc=Zet informatie links uit voor nieuwe managers
+module.FriendlyPool.desc=Kleur bezochte landen in de vriendschappelijke selectie poule
 #accessability
+module.ARIALandmarks.desc=Voeg ARIA landmark roles toe aan alle secties van de website om navigeren met screenreaders te vereenvoudigen
 
+module.TransferHistoryFilters.desc=Voeg filter opties toe aan de transfergeschiedenis pagina
 
 #htevprediction
 # -----------------------------------------------------------------------------
