*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.10.0@9954 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -377,6 +377,7 @@ module.SupporterStatsEnhancements.desc=Markierung für Spieler des aktuellen Tea
 module.MobileEnhancements.desc=Set von Erweiterungen für mobile Geräte
 module.MatchOrderInterface.desc=Verbesserungen der Aufstellungsseite
 module.MatchOrderInterface.GotTrainingOnField.desc=Spieler die bereits Training erhalten haben werden auch auf dem Spielfeld markiert (Nur für Supporter)
+module.MatchOrderInterface.DisplayLastMatchInDetails.desc=Zeige Informationen über das letzte Spiel im Details-Kontextmenü
 module.MatchOrderInterface.CloneOrder.desc=Fügt Links hinzu mit denen Anweisung geklont werden können
 module.MatchOrderInterface.AutoExpandCloned.desc=Geklonte Anweisungen automatisch ausklappen
 module.MatchOrderInterface.Specialties.desc=Zeige Spezialfähigkeiten
@@ -399,6 +400,7 @@ module.PlayerStatsExperience.desc=Sublevel der Erfahrung auf der Spielerstatisti
 module.PlayerStatsExperience.AlwaysShowAll.desc=Automatisch alle möglichen Spiele anzeigen wenn die Seite über die Links auf der Spieler- bzw. der Leistungsentwicklungsseite betreten wird
 module.YouthTwins.desc=Zeigt in Zusammenarbeit mit hattrick youthclub an wieviele potentielle Zwillinge deine Jugendspieler haben könnten. Um dieses Modul nutzen zu können musst du über KEINEN hattrick youthclub Account verfügen. Allerdings ist dieses Modul nur für vorwiegend Supporter sinnvoll da zur Erkennung potentieller Zwillinge die Spielergesichter bekannt sein müssen, was ein Privileg der Supporterschaft ist.
 module.YouthTwins.HideInfoLink.desc=Informationssymbol für Neueinsteiger ausblenden
+module.FriendlyPool.desc=Bereits besuchte Länder in der Freundschaftsspielauswahl einfärben
 #accessability
 
 module.TransferHistoryFilters.desc=Fügt Filteroptionen zur Transferhistorie deines Vereins hinzu
@@ -606,7 +608,7 @@ ForumYouthIcons.tournamentid=Link zu Turnier einfügen
 ForumYouthIcons.tournamentmatchid=Link zu Turnierspiel einfügen
 ForumYouthIcons.debug=FoxTrick debug log einfügen.
 ForumYouthIcons.settings=FoxTrick Einstellungen einfügen.
-ForumSpecialBBCode.q=Zitieren einfügen
+ForumSpecialBBCode.q=Zitat einfügen
 ForumSpecialBBCode.br=Zeilenumbruch einfügen
 ForumSpecialBBCode.user=UserID einfügen
 ForumSpecialBBCode.kit=KitID einfügen
@@ -616,7 +618,7 @@ ForumSpecialBBCode.spoiler=Spoiler hinzufügen
 ForumSpecialBBCode.pre='pre' Format-Tag einfügen
 ForumSpecialBBCode.table=Fügt 'table'-Tags ein bzw. konvertiert den ausgewählten Text in ein Tabelle (Linien werden zu Reihen. Durch "%s" getrennter Text wird zu Zellen.)
 ForumSpecialBBCode.tableSeparator=Konvertiert "%s" in Zellen
-ForumSpecialBBCode.enterSeparator=Eigenen Seperator eingeben
+ForumSpecialBBCode.enterSeparator=Eigenen Separator eingeben
 ForumSpecialBBCode.forumSymbol="%s" einfügen
 ForumSpecialBBCode.symbols=Symbol einfügen\: %s
 
@@ -937,6 +939,9 @@ copy.fixturesSource.copied=HTML Quellcode wurde in die Zwischenablage kopiert.
 
 #matches
 matches.income=Einnahmen\:
+matches.playedHome=Heimspiele
+matches.playedAway=Auswärtsspiele
+matches.playedHomeAway=Heim- und Auswärtsspiele
 
 matches.attackdefensebars=Teamvergleich
 matches.right=rechts
