--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -57,6 +57,7 @@ module.HTDateFormat.FirstDayOfWeekOffset.desc=השתמש בהגדרות מותא
 module.StaffMarker.desc=סמן כינויים של בעלי תפקידים בפורומים ובדפי הקבוצה
 module.StaffMarker.manager.desc=סמן כינויים של בעלי תפקידים בדפי הקבוצה
 module.StaffMarker.own.desc=סמנים מותאמים אישית בפורמט JSON עם מספר משתמש כמפתח וסגנון כערך. לדוגמה\: {"1001"\: "צבע\: אדום;", "1002"\: "צבע רקע\: צהוב;"}
+module.StaffMarker.external.desc=סמן צוות של יישומי CHPP אחרים
 #ForumYouthIcons
 module.ForumYouthIcons.desc=מציג סרגל קישורים עבור אקדמיית הנוער (חל גם על דואר, הודעות לעיתונות, ספר אורחים ומודעות)
 module.ForumYouthIcons.q.desc=מוסיף סמל לתגיות ציטוט, אם חסר
@@ -374,6 +375,8 @@ module.ShowLineupSet.Winning.desc=הדגש קבוצות מובילות
 module.SupporterStatsEnhancements.desc=מדגיש שחקנים נוכחיים במועדון בסטטיסטיקות התומכים
 module.MobileEnhancements.desc=ערכת שיפורים עבור מכשירים ניידים
 module.MatchOrderInterface.desc=שינויים בדף קביעת ההוראות להרכב.
+module.MatchOrderInterface.CloneOrder.desc=הוסף לינק לשכפול הוראות למשחק
+module.MatchOrderInterface.AutoExpandCloned.desc=פתח באופן אוטומטי הוראות משוכפלות
 module.MatchOrderInterface.Specialties.desc=הצג התמחויות של שחקנים
 module.MatchOrderInterface.ShowFaces.desc=הצג פרצופי השחקנים במקום חולצותיהם עבור הרכבים ישנים ועתידיים
 module.MatchOrderInterface.StayOnPage.desc=הישאר בדף מתן ההוראות למשחק אחרי שמירת ההוראות
@@ -391,19 +394,37 @@ module.RatingsDisplay.HatStats.desc=רייטינג רגיל
 module.RatingsDisplay.HTSums.desc=כסיכומי רייטינג האטריק
 module.SafeForWork.desc=מחליף את הסמל ואת טקסט הכותרת בלשוניות האטריק על מנת שייראו חשודות פחות. נא דאגו לבטל את כל המודולים האחרים העלולים להיות מסוכנים, במיוחד את "מודולי ה"התראה.
 module.PlayerStatsExperience.desc=מציג את הרמה הפנימית של הניסיון בדף נתוני השחקן
+module.PlayerStatsExperience.AlwaysShowAll.desc=הצג כברירת מחדל כמות משחקים גדולה ככל הניתן כשמשתמשים בלינקים בדף השחקנים או בדף היסטוריית הביצועים
 module.YouthTwins.desc=מציג את כמות התאומים האפשרית עבור שחקני הנוער שלך בשילוב עם אתר hattrick youthclub. לא חייבים להחזיק בחשבון באתר האטריק יות'קלאב הנ"ל על מנת להשתמש במודול זה. ברם מאחר שכדי לזהות תאומים חשוב מאוד לראות את פני השחקנים, האפשרות הזו זמינה לתומכים בלבד.
+module.YouthTwins.HideInfoLink.desc=בטל את הקישור למידע עבור מצטרפים חדשים
+module.FriendlyPool.desc=סמן בצבע מדינות שכבר ביקרת בהן בתפריט מאגר הידידות
 #accessability
+module.ARIALandmarks.desc=הוסף ARIA landmark (למשתמשים עיוורים) לכל חלקי האתר כדי להקל על הגלישה באתר בעת שימוש בקוראי מסך
 
+module.TransferHistoryFilters.desc=מוסיף אפשרויות סינון לדף היסטוריית ההעברות של הקבוצה
 
 #htevprediction
+module.HTEVPrediction.desc=מוסיף את הסיכויים עבור משחקי הליגה על פי אתר HTEV\: http\://htev.org (על-ידי furr_)
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
 
 #htev
+HTEVPrediction.home.short=ב
+HTEVPrediction.away.short=ח
+HTEVPrediction.tie.short=ת
+HTEVPrediction.explainHome=סיכויים לניצחון של הקבוצה המארחת
+HTEVPrediction.explainTie=סיכויים לכך שהמשחק יסתיים בתיקו
+HTEVPrediction.explainAway=סיכויים לניצחון של קבוצת החוץ
+HTEVPrediction.visitLeague=בקר בליגה ב- http\://www.htev.org
+HTEVPrediction.visitDetailed=קבל מידע מפורט אודות משחק זה ב- http\://www.htev.org
 
 #transfer-history-filters
+TransferHistoryFilters.all=כולם
+TransferHistoryFilters.sold=נמכרו
+TransferHistoryFilters.bought=נרכשו
+TransferHistoryFilters.filter=מסנן\:
 
 #Loyalty display
 LoyaltyDisplay.motherClubBonus=(תוספת מועדון אם)
@@ -415,6 +436,7 @@ YouthTwins.markedTwins=סומנו כתאומים\: %1
 YouthTwins.nonTwins=סומנו כלא-תאומים\: %1
 YouthTwins.undecidedTwins=טרם סומנו\: %1
 YouthTwins.nonHyUser=באפשרותך ללמוד יותר על הפוטנציאל שלו באמצעות שימוש ב-hattrick youthclub.
+YouthTwins.infoText=מהם תאומים וכיצד אני יכול להרוויח מהם?
 
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceText=הוא כבר צבר בין %1 לבין %2 מתוך 28 נקודות ניסיון. ניסיונו הוא בין %3 ו- % 4.
@@ -425,7 +447,26 @@ PlayerStatsExperience.ExperienceChange.title.abbr=נס+
 PlayerStatsExperience.Walkover=משחק זה היה ניצחון טכני. על כן השחקנים לא צברו ניסיון.
 
 
+PlayerStatsExperience.MatchesSinceSkilup=משחקים מאז עליית הרמה האחרונה
+PlayerStatsExperience.matches=משחקים
+PlayerStatsExperience.minutes=דקות
+PlayerStatsExperience.minXPpts=מינ' נק' ניסיון
+PlayerStatsExperience.maxXPpts=מקס' נק' ניסיון
+PlayerStatsExperience.sum=סה"כ
+PlayerStatsExperience.Experience=ניסיון
+PlayerStatsExperience.PerformanceHistory=היסטוריית ביצועים
+PlayerStatsExperience.InternationalPercentage=משחקי ידידות בינ"ל באחוזים\:
 
+PlayerStatsExperience.matchFriendly=משחקי ידידות
+PlayerStatsExperience.matchInternationalFriendly=בינלאומיים
+PlayerStatsExperience.matchNationalFriendly=לאומיים
+PlayerStatsExperience.matchCup=גביע
+PlayerStatsExperience.matchQualification=משחקי מבחן
+PlayerStatsExperience.matchLeague=ליגה
+PlayerStatsExperience.matchNtFriendly=ידידות נבחרות
+PlayerStatsExperience.matchMasters=מאסטרס
+PlayerStatsExperience.matchNtLeague=גביע העולם
+PlayerStatsExperience.matchNtFinals=גביע העולם (חצי-) גמר
 
 #Series statistics
 rating.average=רייטינג ממוצע
@@ -641,6 +682,8 @@ matchOrder.home=בית
 matchOrder.home.abbr=ב
 matchOrder.away=חוץ
 matchOrder.away.abbr=ח
+matchOrder.cloneOrder=שכפל הוראה זו
+matchOrder.cloneOrder.abbr=ש
 
 #Skills
 Playmaking=עשיית משחק
