*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.10.0@9962 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es-CR/foxtrick.properties
+++ b/content/locale/es-CR/foxtrick.properties
@@ -469,6 +469,7 @@ PlayerStatsExperience.matchQualification=Promoción
 PlayerStatsExperience.matchLeague=Liga
 PlayerStatsExperience.matchNtFriendly=Amistosos de Equipos Nacionales
 PlayerStatsExperience.matchMasters=Hattrick Masters
+PlayerStatsExperience.matchNtLeague=Copa del Mundo
 PlayerStatsExperience.matchNtFinals=(Semi)Finales Copa del Mundo
 
 #Series statistics
